# svphwk

./: .gitignore  CMakeLists.txt
db/sqlite/: autoMigrate.cpp
env/: dev_env.env
envreader/: readenv.cpp
models/: models.h
